# MdtNumeric

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py
ci_cd/GitLab/: BuildAndTest_Linux.yml  BuildAndTest_Windows.yml  Conan_CreateAndTest_Linux.yml  Conan_CreateAndTest_Windows.yml  Conan_Deploy_Linux.yml  Conan_Deploy_Windows.yml  Doc.yml
doc/: Doxyfile-dev.in  Doxyfile.in
doc/cpp/: mainpage.dox
libs/: CMakeLists.txt
libs/Catch2/: CMakeLists.txt  Catch2Main.cpp  Catch2QString.cpp  Catch2QString.h
libs/Numeric/: CMakeLists.txt
libs/Numeric/src/: CMakeLists.txt
libs/Numeric/src/Mdt/Numeric/: BasicConversion.cpp  BasicConversion.h  Limits.cpp  Limits.h
libs/Numeric/tests/: CMakeLists.txt
libs/Numeric/tests/src/: BasicConversionErrorTest.cpp  BasicConversionTest.cpp  LimitsTest.cpp
packaging/conan/mdtnumeric/: conanfile.py
packaging/conan/mdtnumeric/test_package/: CMakeLists.txt  conanfile.py  main.cpp
